--- a/public/styles.css
+++ b/public/styles.css
@@ -1,18 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Playball&family=Playwrite+CO+Guides&family=Press+Start+2P&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shadows+Into+Light&display=swap');
 
 :root{
   --main-margin: 30px;
+  --main-border: 1px solid black;
 }
 
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', 'Times New Roman', Times, serif;
 }
 
 a{
   text-decoration: none;
   color: black;
 
+}
+
+#title{
+  margin: var(--main-margin);
 }
 
 .header{
@@ -30,11 +37,70 @@ a{
   margin: var(--main-margin);
 }
 
-.grid-item {
+.grid-item,
+.details {
   display: flex;
   flex-direction: column;
   padding: 20px;
   gap: 5px;
-  border: 1px solid black;
+  border: var(--main-border);
   min-height: 100px;
 }
+
+.grid-item{
+  align-self: center;
+}
+
+.details-button{
+  align-self: start;
+  border: var(--main-border);
+  padding: 5px;
+  transition: background-color 150ms ease-in-out;
+  
+}
+
+.message-form button{
+  background-color: white;
+  border: var(--main-border);
+  padding: 5px;
+  transition: background-color 150ms ease-in-out;
+}
+
+.details-button:hover,
+.message-form button:hover{
+  background-color: grey;
+}
+
+.details-button:focus,
+.message-form button:focus{
+  transform: scale(0.9);
+}
+
+.details{ 
+  max-width: 30%;
+}
+
+
+.message-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+}
+
+fieldset{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px;
+
+}
+
+.details-container{
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+
+
