--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,19 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
-  <title>Document</title>
+  <title>Message Board</title>
 </head>
 <body>
-  <h3 class="header">
-    <a href="/new">
-      <%= linkText %>
-    </a>
-  </h3>
+  <%- include('title') %>
+  <%- include('link', {linkText: linkText, route: route}) %>
   <main class="grid-container">
     <% for (let i = 0; i < messages.length; i++) { %>
       <div class="grid-item">
         <h2><%= messages[i].user %></h2>
         <p><%= messages[i].text%></p>
+        <a class="details-button" href="/details/<%= i %>">Message Details</a>
       </div>
       <% } %>
   </main>
