added a back button for message details

--- a/public/styles.css
+++ b/public/styles.css
@@ -51,19 +51,20 @@ a{
   align-self: center;
 }
 
-.details-button{
-  align-self: start;
+
+.details-button,
+.message-form button{
   border: var(--main-border);
   padding: 5px;
   transition: background-color 150ms ease-in-out;
-  
+}
+
+.details-button{
+  align-self: start;
 }
 
 .message-form button{
   background-color: white;
-  border: var(--main-border);
-  padding: 5px;
-  transition: background-color 150ms ease-in-out;
 }
 
 .details-button:hover,
