--- a/views/details.ejs
+++ b/views/details.ejs
@@ -14,6 +14,7 @@
       <h2><%= message.user %></h2>
       <p><%= message.text %></p>
       <b><%= message.date %></b>
+      <a class="details-button" href="/">Back</a>
     </div>
   </div>
 </body>
